--- a/package.json
+++ b/package.json
@@ -9,8 +9,17 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "browser-sync": "^3.0.2",
     "gulp": "^4.0.2",
-    "gulp-sass": "^5.1.0"
+    "gulp-autoprefixer": "^9.0.0",
+    "gulp-changed": "^5.0.2",
+    "gulp-clean-css": "^4.3.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-imagemin": "^9.0.0",
+    "gulp-line-ending-corrector": "^1.0.3",
+    "gulp-sass": "^5.1.0",
+    "gulp-sourcemaps": "^3.0.0",
+    "gulp-uglify": "^3.0.2"
   },
   "dependencies": {
     "sass": "^1.70.0"
